@@ -10,6 +10,12 @@ class Person
   end
 end
 
+class Page
+  def self.properties
+    [:id, :name, :body].map { |c| OpenStruct.new(:name => c) }
+  end
+end
+
 class TestAdminPageGenerator < Test::Unit::TestCase
 
   def setup
@@ -34,8 +40,7 @@ class TestAdminPageGenerator < Test::Unit::TestCase
       assert_raise(Padrino::Admin::Generators::OrmError) { @page.start(['foo', '-r=/tmp/sample_project']) }
     end
 
-    should 'correctyl generate a new padrino admin application default renderer' do
-      'Person'.classify.constantize
+    should 'correctly generate a new padrino admin application default renderer' do
       silence_logger { @project.start(['sample_project', '--root=/tmp', '-d=datamapper']) }
       silence_logger { @admin.start(['--root=/tmp/sample_project']) }
       silence_logger { @model.start(['person', "name:string", "age:integer", "email:string", '-root=/tmp/sample_project']) }
@@ -52,8 +57,7 @@ class TestAdminPageGenerator < Test::Unit::TestCase
       assert_match_in_file 'role.project_module :people, "/people"', '/tmp/sample_project/admin/app.rb'
     end
 
-    should 'correctyl generate a new padrino admin application with erb renderer' do
-      'Person'.classify.constantize
+    should 'correctly generate a new padrino admin application with erb renderer' do
       silence_logger { @project.start(['sample_project', '--root=/tmp', '-d=datamapper', '-e=erb']) }
       silence_logger { @admin.start(['--root=/tmp/sample_project']) }
       silence_logger { @model.start(['person', "name:string", "age:integer", "email:string", '-root=/tmp/sample_project']) }
@@ -68,6 +72,36 @@ class TestAdminPageGenerator < Test::Unit::TestCase
         assert_match_in_file "text_field :#{field}", '/tmp/sample_project/admin/views/people/_form.erb'
       end
       assert_match_in_file 'role.project_module :people, "/people"', '/tmp/sample_project/admin/app.rb'
+    end
+
+    should 'correctly generate a new padrino admin application with multiple models' do
+      silence_logger { @project.start(['sample_project', '--root=/tmp', '-d=datamapper']) }
+      silence_logger { @admin.start(['--root=/tmp/sample_project']) }
+      silence_logger { @model.start(['person', "name:string", "age:integer", "email:string", '-root=/tmp/sample_project']) }
+      silence_logger { @model.start(['page', "name:string", "body:string", '-root=/tmp/sample_project']) }
+      silence_logger { @page.start(['person', 'page', '--root=/tmp/sample_project']) }
+      # For Person
+      assert_file_exists '/tmp/sample_project/admin/controllers/people.rb'
+      assert_file_exists '/tmp/sample_project/admin/views/people/_form.haml'
+      assert_file_exists '/tmp/sample_project/admin/views/people/edit.haml'
+      assert_file_exists '/tmp/sample_project/admin/views/people/index.haml'
+      assert_file_exists '/tmp/sample_project/admin/views/people/new.haml'
+      %w(name age email).each do |field|
+        assert_match_in_file "label :#{field}", '/tmp/sample_project/admin/views/people/_form.haml'
+        assert_match_in_file "text_field :#{field}", '/tmp/sample_project/admin/views/people/_form.haml'
+      end
+      assert_match_in_file 'role.project_module :people, "/people"', '/tmp/sample_project/admin/app.rb'
+      # For Page
+      assert_file_exists '/tmp/sample_project/admin/controllers/pages.rb'
+      assert_file_exists '/tmp/sample_project/admin/views/pages/_form.haml'
+      assert_file_exists '/tmp/sample_project/admin/views/pages/edit.haml'
+      assert_file_exists '/tmp/sample_project/admin/views/pages/index.haml'
+      assert_file_exists '/tmp/sample_project/admin/views/pages/new.haml'
+      %w(name body).each do |field|
+        assert_match_in_file "label :#{field}", '/tmp/sample_project/admin/views/pages/_form.haml'
+        assert_match_in_file "text_field :#{field}", '/tmp/sample_project/admin/views/pages/_form.haml'
+      end
+      assert_match_in_file 'role.project_module :pages, "/pages"', '/tmp/sample_project/admin/app.rb'
     end
   end
 end
